# android_hardware_qcom_audio

./: .clang-format  Android.mk  METADATA  Makefile.am  NOTICE  OWNERS  audio_hw.c  audiod  configure.ac  hal  hal_mpq  legacy  mm-audio  policy_hal  post_proc  project.config  visualizer  voice_processing
adsprpcd/: Android.bp  adsprpcd.c
alsa_sound/: ALSAControl.cpp  ALSADevice.cpp  ALSAMixer.cpp  ALSAStreamOps.cpp  Android.mk  AudioHardwareALSA.cpp  AudioHardwareALSA.h  AudioPolicyManagerALSA.cpp  AudioPolicyManagerALSA.h  AudioSessionOut.cpp  AudioStreamInALSA.cpp  AudioStreamOutALSA.cpp  AudioUsbALSA.cpp  AudioUsbALSA.h  acdb-loader.h  acoustics_default.cpp  alsa_default.cpp  audio_hw_hal.cpp  audio_policy.conf  audio_policy_hal.cpp
audio-effects/post_proc/: Android.mk  bass_boost.h  bundle.c  effect_api.c  effect_api.h  equalizer.h  reverb.c  virtualizer.c  virtualizer.h  volume_listener.c
audio-effects/visualizer/: Android.mk  offload_visualizer.c
audio-effects/voice_processing/: Android.mk
audiod/: Android.mk  AudioDaemon.cpp  AudioDaemon.h
audiohal_test/: Android.mk  audio_hal_multi_record_test.cpp
configs/: audio_vendor_product.mk
configs/apq8098_latv/: apq8098_latv.mk  audio_policy.conf  audio_policy_configuration.xml
configs/atoll/: atoll.mk  audio_io_policy.conf  audio_platform_info.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_policy_configuration.xml  mixer_paths.xml  mixer_paths_idp.xml  mixer_paths_qrd.xml  mixer_paths_wcd9375.xml  mixer_paths_wcd9375qrd.xml  mixer_paths_wcd937x.xml  mixer_paths_wcd937xqrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_qrd.xml  sound_trigger_mixer_paths_wcd937x.xml  sound_trigger_platform_info.xml
configs/bengal/: audio_configs.xml  audio_effects.xml  audio_io_policy.conf  audio_platform_info.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_platform_info_scubaidp.xml  audio_platform_info_scubaqrd.xml  audio_policy_configuration.xml  audio_policy_configuration_gaming.xml  bengal.mk  card-defs.xml  microphone_characteristics.xml  mixer_paths.xml  mixer_paths_bengal_idp.xml  mixer_paths_bengal_qrd.xml  mixer_paths_qrd.xml  mixer_paths_scubaidp.xml  mixer_paths_scubaqrd.xml  sound_trigger_mixer_paths.xml  sound_trigger_mixer_paths_qrd.xml  sound_trigger_platform_info.xml
configs/blair/: audio_effects.xml  blair.mk  microphone_characteristics.xml
configs/common/: audio_policy_configuration.xml  default.mk  manifest_non_qmaa.xml  media_codecs_vendor_audio.xml  mixer_xml_utils.py
configs/common_au/: audio_policy_configuration.xml  audio_policy_configuration_7_0.xml  car_audio_configuration.xml
configs/holi/: audio_configs.xml  audio_io_policy.conf  audio_platform_info.xml  audio_platform_info_intcodec.xml  audio_platform_info_qrd.xml  audio_policy_configuration.xml  (+10 more)
hal/: Android.mk  AudioCommon.h  AudioDevice.cpp  AudioDevice.h  AudioStream.cpp  AudioStream.h  AudioVoice.cpp  AudioVoice.h  Makefile.am  acdb.c  acdb.h  ahal_config_helper.cpp  ahal_config_helper.h  android.hardware.audio.service.rc  android.hardware.audio.service_64.rc  audio_hal_plugin.h  audio_hw.c  audio_hw.h  audio_hw_extn_api.c  audio_hw_extn_api.h  audio_perf.cpp  audio_perf.h  audio_usb_hal.c  edid.c  edid.h  platform_api.h  platform_info.c  voice.c  voice.h
hal-pal/: Android.mk  AudioCommon.h  AudioDevice.cpp  AudioDevice.h  AudioStream.cpp  AudioStream.h  AudioVoice.cpp  AudioVoice.h  Makefile.am
hal-pal/audio_extn/: Android.mk  AudioExtn.cpp  AudioExtn.h  FM.cpp  Gain.cpp  Gef.cpp  Hfp.cpp  audio_defs.h  audio_extn.h  audio_hidl.cpp  audio_hidl.h  soundtrigger.cpp
hal-qal/: Android.mk  AudioDevice.cpp  AudioDevice.h  AudioStream.cpp  AudioStream.h  AudioVoice.cpp  AudioVoice.h  Makefile.am
hal_mpq/: Android.mk  audio_bitstream_sm.c  audio_bitstream_sm.h  audio_hw.c  audio_hw.h  audio_stream_out.c  platform_api.h
hdmi_in_test/: Android.mk  Makefile.am
legacy/: Android.mk
libalsa-intf/: Android.mk  Makefile.am  alsa_audio.h  alsa_mixer.c  alsa_pcm.c  alsa_ucm.c  alsaucm_test.c  aplay.c  arec.c  msm8960_use_cases.h
mm-audio/: Android.mk
mm-audio/aenc-g711/qdsp6/: Android.mk  Makefile  Makefile.am
mm-audio/aenc-g711/qdsp6/inc/: Map.h  aenc_svr.h  omx_g711_aenc.h  omx_log.h
mm-audio/aenc-g711/qdsp6/src/: aenc_svr.c  omx_g711_aenc.cpp  omx_log.cpp
mm-audio/aenc-g711/qdsp6/test/: omx_g711_enc_test.c
msm7627a/: Android.mk  AudioHardware.cpp  AudioHardware.h  AudioPolicyManager.cpp  AudioPolicyManager.h  HardwarePinSwitching.c  audio_hw_hal.cpp  audio_policy.conf  audio_policy_hal.cpp
msm7x30/: Android.mk  AudioHardware.cpp  AudioHardware.h  AudioPolicyManager.cpp  AudioPolicyManager.h  audio_hw_hal.cpp  audio_policy.conf  audio_policy_hal.cpp
msm8660/: Android.mk  AudioHardware.cpp  AudioHardware.h  AudioPolicyManager.cpp  AudioPolicyManager.h  audio_hw_hal.cpp  audio_policy.conf  audio_policy_hal.cpp  control.h
policy_hal/: Android.mk  AudioPolicyManager.cpp  AudioPolicyManager.h
post_proc/: Android.mk  EffectsHwAcc.cpp  EffectsHwAcc.h  Makefile.am  asphere.c  asphere.h  bass_boost.c  bass_boost.h  bundle.c  bundle.h  effect_api.c  effect_api.h  effect_util.c  equalizer.c  equalizer.h  hw_accelerator.c  ma_listener.c  reverb.c  reverb.h  virtualizer.c  virtualizer.h  volume_listener.c
qahw/: Android.mk  Makefile.am  configure.ac
qahw_api/: Android.mk  Makefile.am
qahw_api/inc/: qahw_api.h  qahw_defs.h  qahw_effect_api.h  qahw_effect_audiosphere.h  qahw_effect_bassboost.h  qahw_effect_environmentalreverb.h  qahw_effect_equalizer.h  qahw_effect_presetreverb.h  qahw_effect_trumpet.h  qahw_effect_virtualizer.h  qahw_effect_visualizer.h
qahw_api/src/: qahw.c  qahw_api.cpp  qahw_effect.c
qahw_api/test/: Android.mk  Makefile.am  qahw_effect_test.c  qahw_effect_test.h  qahw_multi_record_test.c  qahw_playback_test.c  qahw_playback_test.h  qap_wrapper_extn.c  trans_loopback_test.c
stt_meta/: Android.mk  stt_meta_extract.c  stt_meta_extract.h
visualizer/: Android.mk  offload_visualizer.c
voice_processing/: Android.mk  voice_processing.c
(+716 files in other folders)
